--- a/spring-mongodb/application-stg.properties
+++ b/spring-mongodb/application-stg.properties
@@ -12,3 +12,5 @@ spring.data.mongodb.uri=mongodb+srv://<USERNAME>:<PASSWORD>@<ClUSTER-NAME>-<INST
 # Logging configuration.
 logging.level.com.assignment.springboot.mongo=info
 logging.pattern.console= %d{yyyy-MM-dd HH:mm:ss} - %msg%n
+
+info.precedence = spring-mongodb staging application file
