--- a/spring-mongodb/application-stg.properties
+++ b/spring-mongodb/application-stg.properties
@@ -6,7 +6,7 @@ eureka.client.serviceUrl.defaultZone:http://localhost:8761/eureka
 # Local mongodb configuration.
 
 #spring.data.mongodb.uri=mongodb+srv://<USERNAME>:<PASSWORD>@<ClUSTER-NAME>-<INSTANCE-ID>/<DATABASE-NAME>?retryWrites=true
-spring.data.mongodb.uri=mongodb+srv://<USERNAME>:<PASSWORD>@<ClUSTER-NAME>-<INSTANCE-ID>/<DATABASE-NAME>?retryWrites=true
+spring.data.mongodb.uri=mongodb+srv://admin:33.QNBqXHfD7V#J@vanathi-mongodb-sg1.5jdii.mongodb.net/latest?retryWrites=true
 #spring.data.mongodb.database=temp_db
 
 # Logging configuration.
