Properties using bean

--- a/spring-mongodb/application-stg.properties
+++ b/spring-mongodb/application-stg.properties
@@ -14,3 +14,7 @@ logging.level.com.assignment.springboot.mongo=info
 logging.pattern.console= %d{yyyy-MM-dd HH:mm:ss} - %msg%n
 
 info.precedence = spring-mongodb staging application file changed
+
+service.downstream.url=http://localhost:8080/actuator
+service.downstream.connectTimeout=500
+service.downstream.readTimeout=2000
