Properties using bean change 4

--- a/spring-mongodb/application-stg.properties
+++ b/spring-mongodb/application-stg.properties
@@ -13,7 +13,7 @@ spring.data.mongodb.uri=mongodb+srv://admin:33.QNBqXHfD7V#J@vanathi-mongodb-sg1.
 logging.level.com.assignment.springboot.mongo=info
 logging.pattern.console= %d{yyyy-MM-dd HH:mm:ss} - %msg%n
 
-info.precedence = spring-mongodb staging application file changed
+info.precedence = spring-mongodb staging application file changed 32
 
 service.downstream.url=http://localhost:8080/actuator
 service.downstream.connectTimeout=50
